# ResearchAgent

./: .cursorrules  .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  SETUP.md  USAGE_GUIDE.md  api.py  cloudbuild.yaml  config.py  fix_env.py  graph.py  pyproject.toml  pytest.ini  requirements.txt  run_eval.py  run_research.py  server.py  sierra_recon_report.json  state.py  test_supabase.py
.github/workflows/: ci.yml
db/: README.md  __init__.py  client.py  models.py  repository.py  schema.sql
docs/: architecture.md
nodes/: __init__.py  critic.py  planner.py  researcher.py  writer.py
research-client/: SETUP.md  package-lock.json  package.json
research-client/app/: layout.tsx  page.tsx
research-client/app/api/research/: route.ts
research-client/app/components/: ErrorBoundary.tsx
tests/: __init__.py  golden_dataset.json  test_logic.py
tools/: __init__.py  search.py
utils/: __init__.py  observability.py  pii_redaction.py  serialization.py
