[project]
name = "the-oracle"
version = "0.1.0"
description = "A recursive deep-research agent system"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langsmith>=0.1.0",
    "tavily-python>=0.5.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "postgrest>=0.16.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pandas>=2.0.0",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Configure for flat project structure (application, not library)
# Tell hatchling to include all Python files from root
only-include = [
    "config.py",
    "graph.py", 
    "state.py",
    "run_research.py",
    "server.py",
    "nodes",
    "tools",
    "utils",
    "db",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
